# fyi26-ai-guardian

./: .dockerignore  .gitignore  Dockerfile  How_To_Run.md  Makefile  README.md  README_DETAILED.md  check_db.py  docker-compose.yml  pyproject.toml  requirements.txt
PHASE DETAILS/: PLANING.md  Phase_1_Config_System.md  Phase_2_JSON_Export.md  Phase_3_Database.md  Phase_4_ML_Alerts.md  Phase_5_Precision_Recall.md  Phase_6_Dashboard.md  Phase_7_Live_Ingestion.md  Phase_8_Deployment.md  Phase_9_Hardware.md  ProJect_Over_View.md
config/: guardian_config.yaml
dashboard/: app.py  auth.py  routes.py
docs/: FYI26_AI_Guardian_Closure_Deck.pptx  FYI26_AI_Guardian_Closure_Deck_Editorial.pptx  How_To_Run.md  MR-readiness-david.md  README.md  README_DETAILED.md  STAGE-5-TO-DO-LIST.md  TO-DO-LIST.md  Team Formation and Idea Development (Stage 1).md  alert_schema.md  architecture.md  dashboard_contract.md  dashboard_handoff.md  database_contract.md  expected_results.md  feature-implementation-notes.md  guardian_phase1_closure.md  landing_page_plan.md  login.md  login_feature_plan.md  mission_planner_sitl_setup.md  phase1_checklist.md  project-overview-for-newcomers.md  project-planning-stage-2  project-planning-stage-2.md  schemas.md  stage-1-team-formation-and-idea.md  stage-2-project-planning.md  stage-3-technical-documentation.md  stage-4-mvp-development-and-execution.md  stage-4-mvp-development.md  tech_stack.md  technical-documentation-stage-3.md  telemetry_schema.md  validation_plan.md
guardian/: alerts.py  config.py  db.py  engine.py  expectations.py  export.py  main.py  (+13 more)
(+93 files in other folders)
