[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fyi26-ai-guardian"
version = "0.1.0"
description = "Human-in-the-Loop AI Guardian for RC aircraft telemetry (Airbus FYI26)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "PyYAML>=6.0",
    "Flask>=3.0",
    "pyserial>=3.5",
    "pymavlink>=2.4",
]

[project.optional-dependencies]
dev  = ["pytest>=8.0"]
mqtt = ["paho-mqtt>=1.6"]

[project.scripts]
guardian           = "guardian.main:_cli"
guardian-dashboard = "dashboard.app:run_dashboard"
guardian-live      = "guardian.ingest_runner:run_live"

[tool.setuptools.packages.find]
where   = ["."]
include = ["guardian*", "dashboard*"]
